--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "Portifolio"
+    "liveServer.settings.multiRootWorkspaceName": "HTML5-CSS3"
 }
